[tool.poetry]
name = "foo"
version = "0.2.0"
description = ""

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.34.103"
cryptography = ">=42.0.7"
defusedxml = "^0.7.1"
django = "~4.2.0"
django-extensions = "^3.2.3"
django-filter = "22.1"
django-mjml = "^1.2"
django-octicons = "^1.0.2"
django-otp = "^1.5.0"
django-redis = "^5.4.0"
django-ses = "^4.0.0"
graphene-django = "~3.2.0"
gunicorn = { extras = ["gevent"], version = "^22.0.0" }
hashids = "^1.3.1"
jsonschema = "^4.22.0"
kombu = "^5.3.7"
prometheus-client = "^0.20.0"
psycopg2 = { version ="^2.9.9", optional = true }
psycopg2-binary = { version ="^2.9.9", optional = true }
pyjwt = "^2.8.0"
python-gitlab = "^4.4.0"
qrcode = "^7.4.2"
redis = { version = "^5.0.4", extras = ["hiredis"] }
requests = "^2.32.0"
sentry-sdk = "1.39.0"
stripe = "^5.5.0"
django-environ = "^0.9.0"
django-storages = { version = "1.12.3", extras = ["google"] }
tomlkit = "^0.5.11"
celery = { version = "^5.3.1", extras = ["zstd", "pytest"] }
atlassian-jwt = "^1.8.1"
slackclient = "^2.7.1"
rudder-sdk-python = "^1.0.0-beta.1"
psycogreen = "^1.0.2"
drawsvg = "^1.8.3"
pyOpenSSL = "^24.0.0"
astor = "^0.8.1"
django-health-check = "^3.16.5"
regex = "^2022.6.2"
black = "^24.0.0"
geoip2 = "^4.1.0"
django-import-export = "^2.5.0"
django-cors-headers = "^3.13.0"
markdown2 = "2.4.6"
social-auth-core = { git = "https://git@github.com/python-social-auth/social-core.git", rev = "51ff887052317b923c5e7d818fb7714b9b96991b" }
django-graphql-social-auth = { git = "https://git@github.com/deepsourcelabs/django-graphql-social-auth.git", rev = "5a7deac515dba3d31902b8d0d451f135072c4de1" }
djangosaml2 = "^1.5.1"
bleach = "^4.0.0"
sonyflake-py = "^1.3.0"
Pygments = "^2.18.0"
google-api-python-client = "^2.31.0"
google-auth = "^2.11.0"
django-scim2 = "^0.17.3"
pandas = "^1.4.3"
django-celery-beat = "^2.2.0"
python-frontmatter = "^1.0.0"
gevent = "^24.2.0"
django-debug-toolbar = "^3.0"
django-graphiql-debug-toolbar = "^0.2.0"
aiohttp = "^3.8.0"
html2text = "^2024.2.26"
social-auth-app-django = "5.0.0"
cvss = "^3.2"
packaging = "^24.1"
pydantic = "^2.9.2"
openai = "^1.68.2"
google-genai = "^1.8.0"
pgvector = "^0.4.0"

[tool.poetry.group.dev.dependencies]
bpython = "^0.24"
httpretty = "^1.1.4"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-django = "^4.8.0"
pytest-sugar = "^1.0.0"
responses = "^0.25.0"
model-bakery = "^1.1"
pytest-xdist = "^3.6.1"
pytest-retry = "1.2.1"
pytest-ordering = "^0.6"
mypy = "^1.10.0"
django-stubs = {extras = ["compatible-mypy"], version = "^5.1.3"}
pytest-asyncio = "^0.24.0"
celery-types = "^0.23.0"

[tool.poetry.extras]
dev = ["psycopg2-binary"]
prod = ["psycopg2"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
